# RUL_Project

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose-server.yml  docker-compose.yml  eda_full_advanced.ipynb  main.py  model_inference_example.py  pyproject.toml
.github/workflows/: test-and-deploy.yml
example_input/: zenodo_battery_1_up_to_200_cycles.csv
notebook/: ML-cross-dataset-v5.ipynb  data.ipynb  feature_engineer.ipynb  modelling.ipynb
tests/: test_models.py
