[project]
name = "rul-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio==4.11.0",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==25.1.0",
    "arrow==1.4.0",
    "asttokens==3.0.0",
    "async-lru==2.0.5",
    "attrs==25.4.0",
    "babel==2.17.0",
    "beautifulsoup4==4.14.2",
    "bleach==6.3.0",
    "cffi==2.0.0",
    "comm==0.2.3",
    "dash>=3.2.0",
    "dash-bootstrap-components>=2.0.4",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "fqdn==1.5.1",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "jedi==0.19.2",
    "joblib>=1.5.2",
    "json5==0.12.1",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.3.0",
    "jupyter-server==2.17.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.10",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.28.0",
    "lark==1.3.1",
    "matplotlib>=3.10.7",
    "matplotlib-inline==0.2.1",
    "mistune==3.1.4",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "notebook==7.4.7",
    "notebook-shim==0.2.4",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "platformdirs==4.5.0",
    "plotly>=6.4.0",
    "prometheus-client==0.23.1",
    "prompt-toolkit==3.0.52",
    "psutil>=7.1.2",
    "pure-eval==0.2.3",
    "pycparser==2.23",
    "pygments==2.19.2",
    "pytest>=9.0.0",
    "python-json-logger==4.0.0",
    "pywinpty==3.0.2",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rfc3987-syntax==1.1.0",
    "rpds-py==0.28.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "send2trash==1.8.3",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "stack-data==0.6.3",
    "statsmodels>=0.14.5",
    "terminado==0.18.1",
    "tinycss2==1.4.0",
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "torchvision>=0.24.0",
    "tornado==6.5.2",
    "tqdm>=4.67.1",
    "traitlets==5.14.3",
    "uri-template==1.3.0",
    "wcwidth==0.2.14",
    "webcolors==25.10.0",
    "webencodings==0.5.1",
    "websocket-client==1.9.0",
    "xgboost>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = []
exclude = ["notebook*", "example_input*", "datasets*", "models*", "tests*", "__pycache__*"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
